# AstroLab

./: .env.example  .gitignore  GEMINI.md  PORTFOLIO_SHIP_GUIDE.md  README.md  astrolab  commit_and_push.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
astrolab/: __init__.py  cli.py  deck.py  flashcard.py  gemini_client.py  nasa_client.py  quiz.py  session.py
astrolab_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: deck.json  demo_cache.json
data/sessions/: history.json
devlogs/studies/: 2026-02-12-space-pivot.md  2026-04-02-api-key-scare.md  2026-04-02-fixing-usability.md
src/: deck.py  flashcard.py  gemini_client.py  nasa_client.py  quiz.py  session.py
tests/: test_flashcard.py  test_nasa.py
